# swiss_federal_court_mlops

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  makefile  pyproject.toml
src/annotate/: annotation_storage.py  constants.py  models.py  ollama_client.py  parsers.py  run_annotate.py
src/compare_ground_truth/: compare.py  run_compare.py
src/extract/: extract.py  run_extract.py  storage.py
src/scrape/: discover.py  download.py  registry.py  run_scrape.py
tests/: test_annotate.py  test_compare_ground_truth.py  test_extract.py  test_scrape.py
